remove handle from organizer profiles
